@@ -1190,7 +1190,8 @@ cairo_private void
 _cairo_color_set_rgb (cairo_color_t *color, double red, double green, double blue);
 
 cairo_private void
-_cairo_color_get_rgb (cairo_color_t *color, double *red, double *green, double *blue);
+_cairo_color_get_rgb (const cairo_color_t *color,
+		      double *red, double *green, double *blue);
 
 cairo_private void
 _cairo_color_set_alpha (cairo_color_t *color, double alpha);
